// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date helpers formatDateTime formats date and time correctly 1`] = `"2018/01/15 00:00"`;

exports[`Date helpers getRelativeDates calculations for a day ago 1`] = `
Object {
  "from": 2017-12-17T00:00:00.000Z,
  "to": 2017-12-18T00:00:00.000Z,
}
`;

exports[`Date helpers getRelativeDates calculations for a month 1`] = `
Object {
  "from": 2017-11-18T00:00:00.000Z,
  "to": 2017-12-18T00:00:00.000Z,
}
`;

exports[`Date helpers getRelativeDates calculations for a quarter ago 1`] = `
Object {
  "from": 2017-09-18T23:00:00.000Z,
  "to": 2017-12-18T00:00:00.000Z,
}
`;

exports[`Date helpers getRelativeDates calculations for a week ago 1`] = `
Object {
  "from": 2017-12-11T00:00:00.000Z,
  "to": 2017-12-18T00:00:00.000Z,
}
`;

exports[`Date helpers getRelativeDates calculations for an hour ago 1`] = `
Object {
  "from": 2017-12-17T23:00:00.000Z,
  "to": 2017-12-18T00:00:00.000Z,
}
`;

exports[`Date helpers getRelativeDates calculations for an invalid range 1`] = `Object {}`;
